--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
