--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "react-bootstrap": "^2.10.6",
     "react-dom": "^19.0.0",
     "react-router": "^7.0.2",
+    "react-router-dom": "^7.0.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
   }
