--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,10 +7,11 @@ ARG ALPINE_VERSION=3.21
 FROM golang:${GO_VERSION}-alpine${ALPINE_VERSION} AS builder
 
 WORKDIR /app
-COPY go.mod go.sum ./
+COPY backend/go.mod backend/go.sum ./
+COPY .env ./
 RUN go mod download
 
-COPY . ./
+COPY backend/ ./
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
     go build -o server ./cmd/main.go
 
